Upload file and download file now works.

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,5 +1,6 @@
 # Service Discovery
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_HOSTNAME}:8761/eureka/
 eureka.instance.prefer-ip-address=true
-
-avatar.file.path=${AVATAR_IMAGE_PATH}
+# files storage location (stores all files uploaded via REST API)
+storage.location=./uploads
+#avatar.file.path=${AVATAR_IMAGE_PATH}
