--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,21 @@
-spring.application.name=fileManager-uploader
+spring.application.name=file-manager
 server.port=8084
 spring.profiles.active=${ACTIVE_PROFILE:dev}
 spring.profiles.default=dev
 
 # Configuration to upload files
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
+# files storage location (stores all files uploaded via REST API)
+storage.location=./uploads
 
-spring.cloud.stream.bindings.receiveContestImageRequestModel-in-0.destination=CONTEST_IMAGE_REQUEST_TOPIC
-spring.cloud.stream.bindings.sendContestImageResponseModel-out-0.destination=CONTEST_IMAGE_RESPONSE_TOPIC
-
-spring.cloud.stream.bindings.receivePuzzleImageUrl-in-0.destination=PUZZLE_IMAGE_TOPIC
-spring.cloud.stream.bindings.sendPuzzleImageResponseModel-out-0.destination=PUZZLE_IMAGE_URL_TOPIC
-
-spring.cloud.function.definition=receivePuzzleImageUrl;
+#spring.cloud.stream.bindings.receiveContestImageRequestModel-in-0.destination=CONTEST_IMAGE_REQUEST_TOPIC
+#spring.cloud.stream.bindings.sendContestImageResponseModel-out-0.destination=CONTEST_IMAGE_RESPONSE_TOPIC
+#
+#spring.cloud.stream.bindings.receivePuzzleImageUrl-in-0.destination=PUZZLE_IMAGE_TOPIC
+#spring.cloud.stream.bindings.sendPuzzleImageResponseModel-out-0.destination=PUZZLE_IMAGE_URL_TOPIC
+#
+#spring.cloud.function.definition=receivePuzzleImageUrl;
 
 max.poll.records=500
