--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.2</version>
+        <version>2.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.knowit</groupId>
     <artifactId>filemanager</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>filemanager</name>
+    <name>file-manager</name>
     <description>File manage service for the application KnowIt.</description>
     <properties>
         <java.version>14</java.version>
@@ -25,6 +25,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.2.6.RELEASE</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
