Increased the max file size so that videos can be uploaded. Working version!

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,5 +2,9 @@
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_HOSTNAME}:8761/eureka/
 eureka.instance.prefer-ip-address=true
 # files storage location (stores all files uploaded via REST API)
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
 storage.location=./uploads
 #avatar.file.path=${AVATAR_IMAGE_PATH}
+max.poll.records=500
